--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "latest-version": "^7.0.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3"
+  },
+  "engines": {
+    "node": "16.18.1"
   },
   "version": "0.1.0"
 }
